* Fixed several occasions of bugs with respect to the handling of   overcommitting stores:   - has_precommitted was incorrectly set to true in the constructor   - when a precommitted page was committed, vm_store::committed_size     was still changed.   - unreserving memory did not update vm_store::committed_size.   - when precommitted pages were committed, their page count instead of their     size was reserved. * All this lead to bug #1970 which should be fixed now. * Cleanup of vm_cache.cpp, no functional change.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24742 a95241bf-73f2-0310-859d-f6bbb57e9c96